# polyphony-seed-vc

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yaml  docker-compose.airflow.yml  dvc.yaml  params.yaml  pyproject.toml  requirements-airflow.txt
.dvc/: config
.github/workflows/: cml.yaml
apps/dataset_eda/: README.md  app.py
apps/demo/: app.py
apps/singmos/: app.py
configs/: config.yaml  train.yaml
configs/experiment/: ci.yaml  hpo_lab3.yaml  optuna_search.yaml
configs/hparams_search/: optuna.yaml  optuna_random.yaml
configs/logger/: default.yaml  many_loggers.yaml  mlflow.yaml
configs/model/: default.yaml  uvit_whisper_44k.yaml
configs/optimizer/: default.yaml
configs/paths/: default.yaml
configs/presets/: config_dit_mel_seed_uvit_whisper_base_f0_44k.yml
configs/trainer/: default.yaml
dags/: ml_training_pipeline.py
data/: features.dvc  processed.dvc  raw.dvc
data/features/: .gitignore
demo/: app.py
scripts/: build_combined_eval_report.py  build_polyphony_pairs.py  build_train_val_csv.py  generate_ci_fixtures.py  precompute_embedding_features.py  precompute_f0_features.py  precompute_mel_features.py  precompute_semantic_features.py  preprocess_audio_utils.py  process_raw_dataset.py  save_artifacts.py
src/eval/: cli.py
src/eval/templates/: eval_comparison_report.html.j2  eval_report.html.j2
src/seed_vc/features/: __init__.py  base.py
src/seed_vc/features/embedding/: __init__.py  extractor.py
src/seed_vc/features/f0/: __init__.py  extractor.py
src/seed_vc/features/mel/: extractor.py
src/seed_vc/features/semantic/: __init__.py  extractor.py
src/seed_vc/modules/: audio.py  commons.py  diffusion_transformer.py  flow_matching.py  length_regulator.py  rmvpe.py  wavenet.py
src/seed_vc/modules/astral_quantization/: bsq.py  convnext.py  default_model.py  transformer.py
src/seed_vc/modules/bigvgan/: bigvgan.py
src/seed_vc/modules/campplus/: DTDNN.py  classifier.py  layers.py
src/seed_vc/train/: eval.py  features_dataset.py  ft_dataset.py  logger.py  loggers.py  optimizers.py  seed_vc_model.py  train.py
src/seed_vc/utils/: hf_utils.py
tests/: test_artifacts.py  test_dag.py  test_data.py
tests/fixtures/: train.csv
(+17 files in other folders)
