[project]
name = "seed-vc"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "pre-commit>=4.5.0",
    "go-task-bin>=3.45.5",
    "gradio>=6.2.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "librosa>=0.11.0",
    "munch>=4.0.0",
    "einops>=0.8.1",
    "descript-audio-codec>=1.0.0",
    "transformers>=4.57.3",
    "typer>=0.21.0",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
