[project]
name = "seed-vc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pre-commit>=4.5.0",
    "go-task-bin>=3.45.5",
    "click>=8.1.7",
    "gradio>=6.2.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "librosa>=0.11.0",
    "munch>=4.0.0",
    "einops>=0.8.1",
    "descript-audio-codec>=1.0.0",
    "transformers>=4.57.3",
    "typer>=0.21.0",
    "resemblyzer>=0.1.4",
    "torchcodec>=0.9.1",
    "streamlit>=1.22.0",
    "pyloudnorm>=0.1.1",
    "soundfile>=0.12.1",
    "tqdm>=4.66.0",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
